Make transaction event handling idempotent (#13)
